# rat_quickdb

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.ja.md  README.md  expanded.rs  pyproject.toml
.claude/: settings.local.json
examples/: array_field_example.rs  basic_usage.rs  batch_update_demo.rs  cache_performance_comparison.rs  caller_init_log_example.rs  complex_query_demo.rs  config_usage.rs  debug_model_manager.rs  drop_and_recreate_table_test.rs  id_and_cache_demo.rs  id_strategy_test.rs  manual_cache_cleanup.rs  model_definition.rs  model_index_test.rs  model_pagination_demo.rs  mongodb_cache_isolation_test.rs  mongodb_cache_performance_comparison.rs  mongodb_data_structure_test.rs  mongodb_model_crud_test.rs  mongodb_model_index_test.rs  mongodb_simple_config.rs  mysql_array_field_test.rs  mysql_cache_performance_comparison.rs  mysql_connection_test.rs  objectid_strategy_test.rs  pagination_demo.rs  pgsql_cache_performance_comparison.rs  postgres_json_test.rs  postgresql_array_field_test.rs  rust_core_cache_isolation_test.rs  test_all_id_strategies.rs  test_auto_create_table.rs  test_auto_index_creation.rs  test_cache_failure.rs  test_cache_failure_behavior.rs  test_create_if_missing.rs  test_create_if_missing_false.rs  test_mysql_auto_create.rs  test_mysql_id.rs  test_postgres_auto_create.rs  (+2 more)
python/: Cargo.toml  Makefile  README.md  build.rs  pyproject.toml  test_cache_disable.py  test_mongodb_complex_query.py  test_postgresql_complex_query.py
python/docs/: README.md  api_reference.md  getting_started.md  query_operators_guide.md
python/examples/: basic_usage.py  bridge_instance_test.py  cache_config_debug_test.py  cache_performance_comparison.py  cache_performance_comparison_l2.py  caller_init_log_example.py  comprehensive_example.py  database_operations_test.py  datetime_field_demo.py  debug_mysql_json.py  debug_mysql_json_with_model.py  graceful_shutdown.py  model_usage.py  mongodb_cache_performance_comparison.py  mongodb_cache_simple_test.py  mongodb_model_usage.py  mongodb_multi_condition_query_demo.py  multi_condition_query_demo.py  mysql_array_field_example.py  mysql_cache_performance_comparison.py  pgsql_cache_performance_comparison.py  postgresql_array_field_example.py  simple_mongodb_test.py  test_array_compatibility.py  test_array_fields_simple.py  test_drop_table.py  test_mongodb_debug.py  test_mongodb_json_individual.py  test_mysql_complex_query.py  test_mysql_json_fixed.py  test_mysql_json_individual.py  test_mysql_object_field.py  test_mysql_object_field_debug.py  test_object_field_all_databases.py  test_postgresql_json_individual.py  test_register_model.py  test_sql_json_individual.py  test_sql_json_parsing_all.py  test_sql_json_simple.py  test_sqlite_complex_query.py  (+2 more)
python/object_test_cache/: IDENTITY  LOG  LOG.old.1755788473621328  LOG.old.1755788523538157  LOG.old.1755788547711709  LOG.old.1755788721435877  LOG.old.1755788775402613  OPTIONS-000027
python/rat_quickdb_py/: __init__.py
python/simple_test_cache/: IDENTITY  LOG
python/src/: async_handler.rs  bridge.rs  config.rs  lib.rs  message.rs  model_bindings.rs  parser.rs
src/: cache.rs  cache_singleton.rs  config.rs  error.rs  id_generator.rs  lib.rs  manager.rs  model.rs  odm.rs  pool.rs  serializer.rs  types.rs
src/adapter/: cached.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  query_builder.rs  sqlite.rs
src/python_api/: builders.rs  mod.rs  queue_bridge.rs  simple_queue_bridge.rs
src/table/: manager.rs  mod.rs  schema.rs  version.rs
src/task_queue/: error.rs  manager.rs  mod.rs  task.rs  worker.rs
tests/: cache_comprehensive_test.rs  cache_fix_test.rs  mongodb_array_field_test.rs  mysql_array_field_test.rs  postgresql_array_field_test.rs
