[package]
name = "rat_quickdb"
version = "0.1.0"
edition = "2024"
authors = ["0ldm0s <oldmos@gmail.com>"]
description = "跨数据库ORM库，支持SQLite、PostgreSQL、MySQL、MongoDB的统一接口"
keywords = ["database", "orm", "sqlite", "postgresql", "mysql", "mongodb"]
categories = ["database"]

[dependencies]
# 日志系统 - 使用项目内的 zerg_creep
zerg_creep = { path = "../zerg_creep" }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 并发数据结构和无锁队列
crossbeam-queue = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
arc-swap = "1.0"
once_cell = "1.0"

# 数据库驱动
# SQLite
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"], optional = true }
# PostgreSQL
tokio-postgres = { version = "0.7", optional = true }
# MySQL
mysql_async = { version = "0.34", optional = true }
# MongoDB
mongodb = { version = "2.8", optional = true }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 支持
uuid = { version = "1.0", features = ["v4", "serde"] }

# 字符串处理
regex = "1.0"
base64 = "0.22"
rand = "0.8"
bytes = "1.0"

# PyO3 支持（可选）
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# 缓存支持
rat_memcache = { path = "../rat_memcache", optional = true }
# 雪花算法ID生成
snowflake = { version = "1.3", optional = true }

[features]
default = ["sqlite"]
# 数据库后端特性
sqlite = ["dep:sqlx"]
postgresql = ["dep:tokio-postgres"]
mysql = ["dep:mysql_async"]
mongodb = ["dep:mongodb"]
# PyO3 绑定
python = ["dep:pyo3"]
# 缓存支持
cache = ["dep:rat_memcache"]
# 雪花算法ID支持
snowflake-id = ["dep:snowflake"]
# 全部数据库支持
all-databases = ["sqlite", "postgresql", "mysql", "mongodb"]
# 全部功能支持
full = ["all-databases", "cache", "snowflake-id", "python"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
env_logger = "0.10"
