[package]
name = "rat_quickdb"
version = "0.2.2"
edition = "2024"
authors = ["0ldm0s <oldmos@gmail.com>"]
description = "强大的跨数据库ODM库，支持自动索引创建、统一接口和现代异步架构"
license = "LGPL-3.0"
repository = "https://github.com/0ldm0s/rat_quickdb"
homepage = "https://github.com/0ldm0s/rat_quickdb"
documentation = "https://docs.rs/rat_quickdb"
readme = "README.md"
keywords = ["odm", "database", "async", "cross-database", "mongodb"]
categories = [
    "database",
    "asynchronous",
    "web-programming",
    "data-structures",
    "development-tools::procedural-macro-helpers"
]

[dependencies]
# 日志系统 - 使用 rat_logger
rat_logger = "0.2.8"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 并发数据结构和无锁队列
crossbeam-queue = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
arc-swap = "1.0"
once_cell = "1.0"

# 数据库驱动
# SQLite
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "mysql", "postgres", "chrono", "uuid", "json"] }
# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
# MySQL
mysql_async = { version = "0.34" }
# MongoDB
mongodb = { version = "2.8" }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 支持
uuid = { version = "1.0", features = ["v4", "serde"] }

# URL 编码（MongoDB URI 生成需要）
urlencoding = "2.1"

# 字符串处理
regex = "1.0"
base64 = "0.22"
rand = "0.8"
bytes = "1.0"

# 缓存支持
rat_memcache = { version = "0.2.3", features = ["full-features"] }
# 雪花算法ID生成
snowflake = { version = "1.3" }

# PyO3 支持（可选）
pyo3 = { version = "0.21.0", features = ["extension-module"], optional = true }

[lib]
name = "rat_quickdb"
crate-type = ["cdylib", "rlib"]

[features]
default = ["melange-storage"]
# PyO3 绑定 (默认禁用)
python-bindings = ["pyo3"]
melange-storage = []
# 完整功能
full-features = ["python-bindings", "melange-storage"]

# 示例和测试所需的特性
examples = []
test-all = ["examples"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full-features"]

# Badges for README (these are rendered by shields.io)
# Add these to your README.md:
# [![Crates.io](https://img.shields.io/crates/v/rat_quickdb.svg)](https://crates.io/crates/rat_quickdb)
# [![Documentation](https://docs.rs/rat_quickdb/badge.svg)](https://docs.rs/rat_quickdb)
# [![License](https://img.shields.io/crates/l/rat_quickdb.svg)](https://github.com/0ldm0s/rat_quickdb/blob/main/LICENSE)
# [![Downloads](https://img.shields.io/crates/d/rat_quickdb.svg)](https://crates.io/crates/rat_quickdb)
# [![Rust](https://img.shields.io/badge/rust-1.70%2B-orange.svg)](https://rust-lang.org)

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

# Examples dependencies for testing
[[example]]
name = "test_auto_index_creation"
path = "examples/test_auto_index_creation.rs"
required-features = ["examples"]
