[package]
name = "rat_quickdb_py"
version = "0.1.6"
edition = "2021"
authors = ["0ldm0s <oldmos@gmail.com>"]
description = "Python bindings for RAT QuickDB - A high-performance cross-database ORM library"

[lib]
name = "rat_quickdb_py"
crate-type = ["cdylib"]

build = "build.rs"

[dependencies]
# 恢复对主库的依赖，启用 python-bindings 特性
rat_quickdb = { path = "..", default-features = false }
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py38"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-queue = "0.3"
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
zerg_creep = { path = "../../zerg_creep" }
# 暂时保持其他依赖注释状态
# bytes = "1.0"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
# futures = "0.3"