[package]
name = "rat_quickdb_py"
version = "0.2.0"
edition = "2021"
authors = ["0ldm0s <oldmos@gmail.com>"]
description = "Python bindings for RAT QuickDB - A high-performance cross-database ODM library"
license = "LGPL-3.0"
repository = "https://github.com/0ldm0s/rat_quickdb"
homepage = "https://github.com/0ldm0s/rat_quickdb"

[lib]
name = "rat_quickdb_py"
crate-type = ["cdylib"]

build = "build.rs"

[dependencies]
# 使用主库的默认特性
rat_quickdb = { path = ".." }
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py38"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-queue = "0.3"
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rat_logger = "0.2.8"
# 暂时保持其他依赖注释状态
# bytes = "1.0"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
# futures = "0.3"