[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rat-quickdb-py"
dynamic = ["version"]
description = "Python bindings for RAT QuickDB - A high-performance cross-database ODM library with unified interface for SQLite, PostgreSQL, MySQL, and MongoDB"
authors = [{name = "0ldm0s", email = "oldmos@gmail.com"}]
requires-python = ">=3.8"
keywords = ["database", "odm", "sqlite", "postgresql", "mysql", "mongodb", "rust", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://git.sukiyaki.su/0ldm0s/rat_quickdb"
Repository = "https://git.sukiyaki.su/0ldm0s/rat_quickdb"
Documentation = "https://git.sukiyaki.su/0ldm0s/rat_quickdb/src/branch/master/python/README.md"

[tool.maturin]
module-name = "rat_quickdb_py"
python-source = "."
version-from-cargo = true
features = ["pyo3/extension-module"]